--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,8 @@
     "xlocnum": "cpp",
     "xloctime": "cpp",
     "xmemory": "cpp",
-    "xtr1common": "cpp"
+    "xtr1common": "cpp",
+    "map": "cpp",
+    "xtree": "cpp"
   }
 }
