--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,12 @@
     "xmemory": "cpp",
     "xtr1common": "cpp",
     "map": "cpp",
-    "xtree": "cpp"
+    "xtree": "cpp",
+    "array": "cpp",
+    "deque": "cpp",
+    "queue": "cpp",
+    "ranges": "cpp",
+    "span": "cpp",
+    "stack": "cpp"
   }
 }
